--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,11 @@
     <title>Git</title>
 </head>
 <body>
-    
+    <!--Div Contenedor Prueba-->
+    <div class="container">
+        <dic class="row">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex, iure!</p>
+        </dic>
+    </div>
 </body>
 </html>
