--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
     <title>Git</title>
 </head>
 <body>
-    <!--Div Contenedor Prueba-->
+    <!--Div Contenedor Prueba En el repositorio -->
     <div class="container">
         <dic class="row">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex, iure!</p>
